fixed expandeddish edit buttons visibile to oher users

--- a/frontend/src/app/components/browsePageSkeleton/browsePageSkeleton.css
+++ b/frontend/src/app/components/browsePageSkeleton/browsePageSkeleton.css
@@ -6,9 +6,10 @@
     gap: 1rem;
 }
 
-.rectSkeleton {
+.browse_rectSkeleton {
     width: 100%;
 }
+
 
  
 
